--- a/ChatLogin/nbproject/project.properties
+++ b/ChatLogin/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.jackson-all-1.9.0.jar=E:\\Download\\jackson-all-1.9.0.jar\\jackso
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jackson-all-1.9.0.jar}
+    ${file.reference.jackson-all-1.9.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
